--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2006-02-11  Daichi Kawahata <daichi@xfce.org>
 
+	* ja.po: Updated Japanese translations.
 	* ca.po, de.po, el.po, en_GB.po, es.po, fi.po, fr.po, ja.po,
 	  pt_BR.po: Updated.
 
