--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-02-13	Benedikt Meurer <benny@xfce.org>
+
+	* exo-helper/helpers/Terminal.desktop.in: Add "xfce4-terminal" here to
+	  be compatible with Debian/Ubuntu, where no "Terminal" binary is avail-
+	  able, instead the binary (and the package) is named "xfce4-terminal".
+
 2006-02-10	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c: We do not need to keep around the index for every
