Updated French translations by Stephane Roy <sroy@j2n.net>.
(Old svn revision: 19880)

--- a/po/fr.po
+++ b/po/fr.po
@@ -1,14 +1,14 @@
 # French translations for exo package.
 # Copyright (C) 2004-2006 os-cillation e.K.
 # This file is distributed under the same license as the exo package.
-# Stephane Roy <sroy@j2n.net>, 2005.
+# Stephane Roy <sroy@j2n.net>, 2005-2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.3svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-11 13:45+0900\n"
-"PO-Revision-Date: 2005-12-09 10:43+0100\n"
+"PO-Revision-Date: 2006-02-14 14:12+0100\n"
 "Last-Translator: Stephane Roy <sroy@j2n.net>\n"
 "Language-Team: French <traduc@traduc.org>\n"
 "MIME-Version: 1.0\n"
@@ -264,17 +264,17 @@ msgstr "Personnaliser une barre d'outils..."
 #: ../exo/exo-url.c:283
 #, c-format
 msgid "Unable to open `%s'"
-msgstr ""
+msgstr "Impossible d'ouvrir `%s'"
 
 #: ../exo/exo-url.c:305
 #, c-format
 msgid "The URL `%s' is not supported"
-msgstr ""
+msgstr "L'URL `%s' n'est pas supportée"
 
 #: ../exo/exo-url.c:377
 #, c-format
 msgid "Failed to open `%s'."
-msgstr ""
+msgstr "Échec à l'ouverture de `%s'."
 
 #: ../exo/exo-wrap-table.c:169
 msgid "Column spacing"
@@ -388,247 +388,273 @@ msgstr "S'il vous plaît, reportez tout bogue à <%s>.\n"
 #: ../exo-helper/exo-helper-chooser-dialog.c:121
 #: ../exo-helper/exo-preferred-applications-settings.c:62
 msgid "Preferred Applications"
-msgstr ""
+msgstr "Applications favorites"
 
 #.
 #. Internet
 #.
 #: ../exo-helper/exo-helper-chooser-dialog.c:140
 msgid "Internet"
-msgstr ""
+msgstr "Internet"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:153
 msgid "Default Web Browser"
-msgstr ""
+msgstr "Navigateur Web par défaut"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:161
 msgid ""
 "The preferred Web Browser will be used to open\n"
 "hyperlinks and display help contents."
 msgstr ""
+"Le navigateur web favori qui sera utilisé pour ouvrir\n"
+"les liens hypertexte et afficher les contenus d'aide."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:185
 msgid "Default Mail Reader"
-msgstr ""
+msgstr "Lecteur de Courriels par défaut"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:193
 msgid ""
 "The preferred Mail Reader will be used to compose\n"
 "emails when you click on email addresses."
 msgstr ""
+"Le lecteur de courriel favori qui sera utilisé pour composer\n"
+"des courriers quand vous cliquez sur une adresse électronique."
 
 #.
 #. Utilities
 #.
 #: ../exo-helper/exo-helper-chooser-dialog.c:213
 msgid "Utilities"
-msgstr ""
+msgstr "Utilitaires"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:226
 msgid "Default Terminal Emulator"
-msgstr ""
+msgstr "Émulateur de Terminal par défaut"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:234
 msgid ""
 "The preferred Terminal Emulator will be used to\n"
 "run commands that require a CLI environment."
 msgstr ""
+"L'Émulateur de Terminal favori qui sera utilisé pour\n"
+"exécuter les commandes qui requiert un environnement\n"
+"en ligne de commande."
 
 #: ../exo-helper/exo-helper-chooser.c:177
 #: ../exo-helper/exo-helper-chooser.c:184
 msgid "Press left mouse button to change the selected application."
 msgstr ""
+"Presser le bouton gauche de la souris pour changer l'application "
+"sélectionnée."
 
 #: ../exo-helper/exo-helper-chooser.c:183
 msgid "Application Chooser Button"
-msgstr ""
+msgstr "Bouton pour choisir l'application"
 
 #: ../exo-helper/exo-helper-chooser.c:319
 msgid "No application selected"
-msgstr ""
+msgstr "Aucune application sélectionnée"
 
 #: ../exo-helper/exo-helper-chooser.c:335
 msgid "Failed to set default Web Browser"
-msgstr ""
+msgstr "Échec pour affecter le Navigateur Web par défaut"
 
 #: ../exo-helper/exo-helper-chooser.c:336
 msgid "Failed to set default Mail Reader"
-msgstr ""
+msgstr "Échec pour affecter le Lecteur de Courriels par défaut"
 
 #: ../exo-helper/exo-helper-chooser.c:337
 msgid "Failed to set default Terminal Emulator"
-msgstr ""
+msgstr "Échec pour affecter l'Émulateur de Terminal par défaut"
 
 #: ../exo-helper/exo-helper-chooser.c:401
 msgid "Select application"
-msgstr ""
+msgstr "Sélectionner une application"
 
 #: ../exo-helper/exo-helper-chooser.c:439
 msgid "Choose a custom Web Browser"
-msgstr ""
+msgstr "Choisir un Navigateur Web personnalisé"
 
 #: ../exo-helper/exo-helper-chooser.c:440
 msgid "Choose a custom Mail Reader"
-msgstr ""
+msgstr "Choisir un Lecteur de Courriels personnalisé"
 
 #: ../exo-helper/exo-helper-chooser.c:441
 msgid "Choose a custom Terminal Emulator"
-msgstr ""
+msgstr "Choisir un Émulateur de Terminal personnalisé"
 
 #: ../exo-helper/exo-helper-chooser.c:446
 msgid ""
 "Specify the application you want to use\n"
 "as default Web Browser for Xfce:"
 msgstr ""
+"Spécifiez l'application que vous voulez utiliser\n"
+"comme Navigateur Web par défaut pour Xfce :"
 
 #: ../exo-helper/exo-helper-chooser.c:447
 msgid ""
 "Specify the application you want to use\n"
 "as default Mail Reader for Xfce:"
 msgstr ""
+"Spécifiez l'application que vous voulez utiliser\n"
+"comme Lecteur de Courriels par défaut pour Xfce :"
 
 #: ../exo-helper/exo-helper-chooser.c:448
 msgid ""
 "Specify the application you want to use\n"
 "as default Terminal Emulator for Xfce:"
 msgstr ""
+"Spécifiez l'application que vous voulez utiliser\n"
+"comme Émulateur de Terminal par défaut pour Xfce :"
 
 #: ../exo-helper/exo-helper-chooser.c:512
 msgid "Browse the file system to choose a custom command."
 msgstr ""
+"Naviguer sur le système de fichiers pour choisir une commande personnelle."
 
 #: ../exo-helper/exo-helper-chooser.c:687
 msgid "_Other..."
-msgstr ""
+msgstr "_Autre..."
 
 #: ../exo-helper/exo-helper-chooser.c:688
 msgid "Use a custom application which is not included in the above list."
-msgstr ""
+msgstr "Utiliser une application personnalisée qui n'est pas inclut ci-dessus."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:142
 msgid "Choose Preferred Application"
-msgstr ""
+msgstr "Choisir une application favorite"
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:285
 msgid ""
 "Please choose your preferred Web\n"
 "Browser now and click OK to proceed."
 msgstr ""
+"S'il vous plaît, veuillez choisir votre\n"
+"Navigateur Web favori et cliquer sur\n"
+"OK pour valider."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:287
 msgid ""
 "Please choose your preferred Mail Reader\n"
 "now and click OK to proceed."
 msgstr ""
+"S'il vous plaît, veuillez choisir votre\n"
+"Lecteur de Courriels favori et cliquer\n"
+"sur OK pour valider."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:289
 msgid ""
 "Please choose your preferred Terminal\n"
 "Emulator now and click OK to proceed."
 msgstr ""
+"S'il vous plaît, veuillez choisir votre\n"
+"Émulateur de Terminal favori et cliquer\n"
+"sur OK pour valider."
 
 #: ../exo-helper/exo-helper.c:383
 msgid "No command specified"
-msgstr ""
+msgstr "Aucune commande précisée"
 
 #: ../exo-helper/exo-helper.c:675
 msgid "Failed to open helpers.rc for writing"
-msgstr ""
+msgstr "Échec à l'ouverture en écriture de helpers.rc"
 
 #: ../exo-helper/exo-preferred-applications-settings.c:40
 msgid "Failed to launch exo-preferred-applications"
-msgstr ""
+msgstr "Échec au lancement de exo-preferred-applications"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
-msgstr ""
+msgstr "Terminal Xfce"
 
 #: ../exo-helper/helpers/balsa.desktop.in.h:1
 msgid "Balsa"
-msgstr ""
+msgstr "Balsa"
 
 #: ../exo-helper/helpers/debian-sensible-browser.desktop.in.h:1
 msgid "Debian Sensible Browser"
-msgstr ""
+msgstr "Navigateur Sensible Debian"
 
 #: ../exo-helper/helpers/debian-x-terminal-emulator.desktop.in.h:1
 msgid "Debian X Terminal Emulator"
-msgstr ""
+msgstr "Émulateur de terminal X Debian"
 
 #: ../exo-helper/helpers/epiphany.desktop.in.h:1
 msgid "Epiphany Web Browser"
-msgstr ""
+msgstr "Navigateur Web Epiphany"
 
 #: ../exo-helper/helpers/eterm.desktop.in.h:1
 msgid "Enlightened Terminal Emulator"
-msgstr ""
+msgstr "Émulateur de terminal Enlightened"
 
 #: ../exo-helper/helpers/evolution.desktop.in.h:1
 msgid "Novell Evolution"
-msgstr ""
+msgstr "Novell Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.h:1
 msgid "Mozilla Firefox"
-msgstr ""
+msgstr "Mozilla Firefox"
 
 #: ../exo-helper/helpers/galeon.desktop.in.h:1
 msgid "Galeon Web Browser"
-msgstr ""
+msgstr "Navigateur Web Galeon"
 
 #: ../exo-helper/helpers/gnome-terminal.desktop.in.h:1
 msgid "GNOME Terminal"
-msgstr ""
+msgstr "Terminal GNOME"
 
 #: ../exo-helper/helpers/kmail.desktop.in.h:1
 msgid "KMail"
-msgstr ""
+msgstr "KMail"
 
 #: ../exo-helper/helpers/konqueror.desktop.in.h:1
 msgid "Konqueror Web Browser"
-msgstr ""
+msgstr "Navigateur Web Konqueror"
 
 #: ../exo-helper/helpers/mozilla-browser.desktop.in.h:1
 msgid "Mozilla Browser"
-msgstr ""
+msgstr "Navigateur Mozilla"
 
 #: ../exo-helper/helpers/mozilla-mailer.desktop.in.h:1
 msgid "Mozilla Mail"
-msgstr ""
+msgstr "Mozilla Mail"
 
 #: ../exo-helper/helpers/opera-browser.desktop.in.h:1
 msgid "Opera Browser"
-msgstr ""
+msgstr "Navigateur Opera"
 
 #: ../exo-helper/helpers/opera-mailer.desktop.in.h:1
 msgid "Opera Mail"
-msgstr ""
+msgstr "Opera Mail"
 
 #: ../exo-helper/helpers/thunderbird.desktop.in.h:1
 msgid "Mozilla Thunderbird"
-msgstr ""
+msgstr "Mozilla Thunderbird"
 
 #: ../exo-helper/helpers/xterm.desktop.in.h:1
 msgid "X Terminal"
-msgstr ""
+msgstr "Terminal X"
 
 #: ../exo-open/main.c:43
 msgid "Usage: exo-open [URLs...]"
-msgstr ""
+msgstr "Usage : exo-open [URLs...]"
 
 #: ../exo-open/main.c:44
 msgid "       exo-open --launch TYPE [PARAMETERs...]"
-msgstr ""
+msgstr "       exo-open --launch TYPE [PARAMÈTREs...]"
 
 #: ../exo-open/main.c:46
-#, fuzzy
 msgid "  -h, --help                          Print this help message and exit"
-msgstr "  -h, --help        Afficher ce message d'aide et quitter\n"
+msgstr ""
+"  -h, --help                          Afficher ce message d'aide et quitter"
 
 #: ../exo-open/main.c:47
-#, fuzzy
 msgid ""
 "  -v, --version                       Print version information and exit"
-msgstr "  -v, --version     Afficher les informations de version et quitter\n"
+msgstr ""
+"  -v, --version                       Afficher les informations de version "
+"et quitter"
 
 #: ../exo-open/main.c:49
 msgid ""
@@ -637,10 +663,13 @@ msgid ""
 "where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
+"  --launch TYPE [PARAMÈTREs...]       Lancer l'application favorite du TYPE\n"
+"                                      avec les PARAMÈTREs optionnels,\n"
+"                                      où TYPE est une des valeurs suivantes."
 
 #: ../exo-open/main.c:53
 msgid "The following TYPEs are supported for the --launch command:"
-msgstr ""
+msgstr "Les TYPEs suivants sont supportés par la commande --launch :"
 
 #. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
@@ -651,6 +680,9 @@ msgid ""
 "  MailReader       - The preferred Mail Reader.\n"
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
+"  WebBrowser       - Le Navigateur Web favori.\n"
+"  MailReader       - Le Lecteur de Courriels favori.\n"
+"  TerminalEmulator - L'Émulateur de terminal favori."
 
 #: ../exo-open/main.c:63
 msgid ""
@@ -660,9 +692,16 @@ msgid ""
 "pass additional parameters to the application (i.e. for TerminalEmulator\n"
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
+"Si vous ne spécifiez pas l'option --launch, exo-open ouvrira toutes les "
+"URLs\n"
+"spécifiées avec leur lanceurs d'URL favori. Sinon, si vous spécifiez "
+"l'option\n"
+"--launch, vous pouvez sélectionner avec quelle application favorite vous\n"
+"voulez exécuter, et passer des paramètres additionnels à cette application\n"
+"(i.e. pour TerminalEmulator vous pouvez passer la ligne de commande qui\n"
+"devrait être exécutée dans le Terminal)."
 
 #: ../exo-open/main.c:100
-#, fuzzy
 msgid ""
 "Copyright (c) 2005-2006\n"
 "        os-cillation e.K. All rights reserved.\n"
@@ -679,9 +718,9 @@ msgstr ""
 #: ../exo-open/main.c:121
 #, c-format
 msgid "Failed to launch preferred application for category `%s'."
-msgstr ""
+msgstr "Échec au lancement de l'application favorite pour la catégorie `%s'."
 
 #: ../exo-open/main.c:144
 #, c-format
 msgid "Failed to open URL `%s'."
-msgstr ""
+msgstr "Échec à l'ouverture de l'URL `%s'."
