--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-14  Daichi Kawahata <daichi@xfce.org>
+
+	* fr.po: Updated French translations by Stephane Roy
+	  <sroy@j2n.net>.
+
 2006-02-11  Daichi Kawahata <daichi@xfce.org>
 
 	* ja.po: Updated Japanese translations.
