--- a/po/ca.po
+++ b/po/ca.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.3svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-11 13:45+0900\n"
-"PO-Revision-Date: 2006-01-08 21:54+0100\n"
+"PO-Revision-Date: 2006-02-16 22:22+0100\n"
 "Last-Translator: Pau Rul·lan Ferragut <paurullan@bulma.net>\n"
 "Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
@@ -620,13 +620,13 @@ msgstr ""
 #: ../exo-open/main.c:46
 #, fuzzy
 msgid "  -h, --help                          Print this help message and exit"
-msgstr "  -h, --help            Mostra aquest missatge i surt\n"
+msgstr "  -h, --help            Mostra aquest missatge i surt"
 
 #: ../exo-open/main.c:47
 #, fuzzy
 msgid ""
 "  -v, --version                       Print version information and exit"
-msgstr "  -v, --version         Mostra la versió i surt\n"
+msgstr "  -v, --version         Mostra la versió i surt"
 
 #: ../exo-open/main.c:49
 msgid ""
