[i18n] catalan trunk        little work on lib*
(Old svn revision: 19930)

--- a/po/ca.po
+++ b/po/ca.po
@@ -1,15 +1,14 @@
 # Catalan translations for exo package.
 # Copyright (C) 2004-2006 os-cillation e.K.
 # This file is distributed under the same license as the exo package.
-# Pau Rul·lan Ferragut <paurullan@bulma.net> 2005, 2006
-#
+# Pau Rul.lan Ferragut <paurullan@bulma.net> 2005, 2006
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.3svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-11 13:45+0900\n"
-"PO-Revision-Date: 2006-02-16 22:22+0100\n"
-"Last-Translator: Pau Rul·lan Ferragut <paurullan@bulma.net>\n"
+"PO-Revision-Date: 2006-02-17 23:51+0100\n"
+"Last-Translator: Pau Rul.lan Ferragut <paurullan@bulma.net>\n"
 "Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -262,17 +261,17 @@ msgstr "Personalitza barra d'eines..."
 #: ../exo/exo-url.c:283
 #, c-format
 msgid "Unable to open `%s'"
-msgstr ""
+msgstr "No s'ha pogut obrir `%s'"
 
 #: ../exo/exo-url.c:305
 #, c-format
 msgid "The URL `%s' is not supported"
-msgstr ""
+msgstr "No es suporten URL com `%s'"
 
 #: ../exo/exo-url.c:377
 #, c-format
 msgid "Failed to open `%s'."
-msgstr ""
+msgstr "És impossible obrir `%s'."
 
 #: ../exo/exo-wrap-table.c:169
 msgid "Column spacing"
@@ -386,247 +385,263 @@ msgstr "Per favor, informi dels errors a <%s>.\n"
 #: ../exo-helper/exo-helper-chooser-dialog.c:121
 #: ../exo-helper/exo-preferred-applications-settings.c:62
 msgid "Preferred Applications"
-msgstr ""
+msgstr "Apliacions preferides"
 
 #.
 #. Internet
 #.
 #: ../exo-helper/exo-helper-chooser-dialog.c:140
 msgid "Internet"
-msgstr ""
+msgstr "Internet"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:153
 msgid "Default Web Browser"
-msgstr ""
+msgstr "Navegador web predeterminat"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:161
 msgid ""
 "The preferred Web Browser will be used to open\n"
 "hyperlinks and display help contents."
 msgstr ""
+"El navegador web preferit s'usarà per obrir els\n"
+"hiperenllaços i mostrar l'ajuda."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:185
 msgid "Default Mail Reader"
-msgstr ""
+msgstr "Client de correu preferit"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:193
 msgid ""
 "The preferred Mail Reader will be used to compose\n"
 "emails when you click on email addresses."
 msgstr ""
+"El client de correu preferit s'usarà per redactar\n"
+"correus quan faceu clic sobre una adreça"
 
 #.
 #. Utilities
 #.
 #: ../exo-helper/exo-helper-chooser-dialog.c:213
 msgid "Utilities"
-msgstr ""
+msgstr "Utilitats"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:226
 msgid "Default Terminal Emulator"
-msgstr ""
+msgstr "Emulador de terminal predeterminat"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:234
 msgid ""
 "The preferred Terminal Emulator will be used to\n"
 "run commands that require a CLI environment."
 msgstr ""
+"L'emulador de terminal preferit s'usarà per executar\n"
+"ordres dins un entorn de línea d'ordres."
 
 #: ../exo-helper/exo-helper-chooser.c:177
 #: ../exo-helper/exo-helper-chooser.c:184
 msgid "Press left mouse button to change the selected application."
-msgstr ""
+msgstr "Preméu el botó dret del ratolí per canviar l'apliació seleccionada."
 
 #: ../exo-helper/exo-helper-chooser.c:183
 msgid "Application Chooser Button"
-msgstr ""
+msgstr "Botó d'elecció d'apliació"
 
 #: ../exo-helper/exo-helper-chooser.c:319
 msgid "No application selected"
-msgstr ""
+msgstr "No s'ha seleccionat cap apliació"
 
 #: ../exo-helper/exo-helper-chooser.c:335
 msgid "Failed to set default Web Browser"
-msgstr ""
+msgstr "És impossible definir el navegador web predeterminat"
 
 #: ../exo-helper/exo-helper-chooser.c:336
 msgid "Failed to set default Mail Reader"
-msgstr ""
+msgstr "És impossible definir el client de correu predeterminat"
 
 #: ../exo-helper/exo-helper-chooser.c:337
 msgid "Failed to set default Terminal Emulator"
-msgstr ""
+msgstr "És impossible definir l'emulador de terminal predeterminat"
 
 #: ../exo-helper/exo-helper-chooser.c:401
 msgid "Select application"
-msgstr ""
+msgstr "Seleccioni apliació"
 
 #: ../exo-helper/exo-helper-chooser.c:439
 msgid "Choose a custom Web Browser"
-msgstr ""
+msgstr "Esculliu un navegador web"
 
 #: ../exo-helper/exo-helper-chooser.c:440
 msgid "Choose a custom Mail Reader"
-msgstr ""
+msgstr "Esculliu un client de correu"
 
 #: ../exo-helper/exo-helper-chooser.c:441
 msgid "Choose a custom Terminal Emulator"
-msgstr ""
+msgstr "Esculliu un emulador de terminal"
 
 #: ../exo-helper/exo-helper-chooser.c:446
 msgid ""
 "Specify the application you want to use\n"
 "as default Web Browser for Xfce:"
 msgstr ""
+"Especifiqueu l'apliació que voleu usar\n"
+"com a navegador web per Xfce:"
 
 #: ../exo-helper/exo-helper-chooser.c:447
 msgid ""
 "Specify the application you want to use\n"
 "as default Mail Reader for Xfce:"
 msgstr ""
+"Especifiqueu l'apliació que voleu usar\n"
+"com a client de correu per Xfce:"
 
 #: ../exo-helper/exo-helper-chooser.c:448
 msgid ""
 "Specify the application you want to use\n"
 "as default Terminal Emulator for Xfce:"
 msgstr ""
+"Especifiqueu l'apliació que voleu usar\n"
+"com a emulador de terminal per Xfce:"
 
 #: ../exo-helper/exo-helper-chooser.c:512
 msgid "Browse the file system to choose a custom command."
-msgstr ""
+msgstr "Navega pel sistema de fitxer per escullir una ordre."
 
 #: ../exo-helper/exo-helper-chooser.c:687
 msgid "_Other..."
-msgstr ""
+msgstr "_Altres..."
 
 #: ../exo-helper/exo-helper-chooser.c:688
 msgid "Use a custom application which is not included in the above list."
-msgstr ""
+msgstr "Usa una apliació que no està inclosa a la llista anterior."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:142
 msgid "Choose Preferred Application"
-msgstr ""
+msgstr "Tria l'apliació preferida"
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:285
 msgid ""
 "Please choose your preferred Web\n"
 "Browser now and click OK to proceed."
 msgstr ""
+"Per favor trieu el navegador web\n"
+" preferit i preméu Val per seguir"
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:287
 msgid ""
 "Please choose your preferred Mail Reader\n"
 "now and click OK to proceed."
 msgstr ""
+"Per favor trieu el client de correu\n"
+" preferit i preméu Val per seguir"
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:289
 msgid ""
 "Please choose your preferred Terminal\n"
 "Emulator now and click OK to proceed."
 msgstr ""
+"Per favor trieu l'emulador de terminal\n"
+" preferit i preméu Val per seguir"
 
 #: ../exo-helper/exo-helper.c:383
 msgid "No command specified"
-msgstr ""
+msgstr "No heu especificat cap ordre"
 
 #: ../exo-helper/exo-helper.c:675
 msgid "Failed to open helpers.rc for writing"
-msgstr ""
+msgstr "És impossible obrir helpers.rc per escriptura"
 
 #: ../exo-helper/exo-preferred-applications-settings.c:40
 msgid "Failed to launch exo-preferred-applications"
-msgstr ""
+msgstr "És impossible llançar apliacions-preferides-exo"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
-msgstr ""
+msgstr "Terminal Xfce"
 
 #: ../exo-helper/helpers/balsa.desktop.in.h:1
 msgid "Balsa"
-msgstr ""
+msgstr "Balsa"
 
 #: ../exo-helper/helpers/debian-sensible-browser.desktop.in.h:1
 msgid "Debian Sensible Browser"
-msgstr ""
+msgstr "Navegador sensible de Debian"
 
 #: ../exo-helper/helpers/debian-x-terminal-emulator.desktop.in.h:1
 msgid "Debian X Terminal Emulator"
-msgstr ""
+msgstr "Emulador de Terminal X de Debian"
 
 #: ../exo-helper/helpers/epiphany.desktop.in.h:1
 msgid "Epiphany Web Browser"
-msgstr ""
+msgstr "Navegador web Epiphany"
 
 #: ../exo-helper/helpers/eterm.desktop.in.h:1
 msgid "Enlightened Terminal Emulator"
-msgstr ""
+msgstr "Emulador de terminal Enlightened"
 
 #: ../exo-helper/helpers/evolution.desktop.in.h:1
 msgid "Novell Evolution"
-msgstr ""
+msgstr "Novell Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.h:1
 msgid "Mozilla Firefox"
-msgstr ""
+msgstr "Mozilla Firefox"
 
 #: ../exo-helper/helpers/galeon.desktop.in.h:1
 msgid "Galeon Web Browser"
-msgstr ""
+msgstr "Navegador web Galeon"
 
 #: ../exo-helper/helpers/gnome-terminal.desktop.in.h:1
 msgid "GNOME Terminal"
-msgstr ""
+msgstr "Terminal Gnome"
 
 #: ../exo-helper/helpers/kmail.desktop.in.h:1
 msgid "KMail"
-msgstr ""
+msgstr "KMail"
 
 #: ../exo-helper/helpers/konqueror.desktop.in.h:1
 msgid "Konqueror Web Browser"
-msgstr ""
+msgstr "Navegador web Konqueror"
 
 #: ../exo-helper/helpers/mozilla-browser.desktop.in.h:1
 msgid "Mozilla Browser"
-msgstr ""
+msgstr "Navegador Mozilla"
 
 #: ../exo-helper/helpers/mozilla-mailer.desktop.in.h:1
 msgid "Mozilla Mail"
-msgstr ""
+msgstr "Correu de Mozilla"
 
 #: ../exo-helper/helpers/opera-browser.desktop.in.h:1
 msgid "Opera Browser"
-msgstr ""
+msgstr "Navegador Opera"
 
 #: ../exo-helper/helpers/opera-mailer.desktop.in.h:1
 msgid "Opera Mail"
-msgstr ""
+msgstr "Correu d'Opera"
 
 #: ../exo-helper/helpers/thunderbird.desktop.in.h:1
 msgid "Mozilla Thunderbird"
-msgstr ""
+msgstr "Mozilla Thunderbird"
 
 #: ../exo-helper/helpers/xterm.desktop.in.h:1
 msgid "X Terminal"
-msgstr ""
+msgstr "Terminal X"
 
 #: ../exo-open/main.c:43
 msgid "Usage: exo-open [URLs...]"
-msgstr ""
+msgstr "Ús: exo-open [URLs...]"
 
 #: ../exo-open/main.c:44
 msgid "       exo-open --launch TYPE [PARAMETERs...]"
-msgstr ""
+msgstr "        exo-open --launch TIPUS [PARÀMETREs...]"
 
 #: ../exo-open/main.c:46
-#, fuzzy
 msgid "  -h, --help                          Print this help message and exit"
-msgstr "  -h, --help            Mostra aquest missatge i surt"
+msgstr "  -h, --help                        Mostra aquest missatge i surt"
 
 #: ../exo-open/main.c:47
-#, fuzzy
 msgid ""
 "  -v, --version                       Print version information and exit"
-msgstr "  -v, --version         Mostra la versió i surt"
+msgstr "  -v, --version                 Mostra la versió i surt"
 
 #: ../exo-open/main.c:49
 msgid ""
@@ -635,10 +650,13 @@ msgid ""
 "where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
+"  --launch TIPUS [PARÀMETREs...]         Llença l'apliació preferida del TIPUS\n"
+"                                         amb els PARÀMETRES opcionals, on TIPUS\n"
+"                                         és un dels valors següents."
 
 #: ../exo-open/main.c:53
 msgid "The following TYPEs are supported for the --launch command:"
-msgstr ""
+msgstr "Els següents TIPUS són els suportats per l'ordre --launch:"
 
 #. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
@@ -649,6 +667,9 @@ msgid ""
 "  MailReader       - The preferred Mail Reader.\n"
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
+"  WebBrowser       - El navegador web preferit.\n"
+"  MailReader       - El client de correu preferit.\n"
+"  TerminalEmulator - El emulador de terminal preferit."
 
 #: ../exo-open/main.c:63
 msgid ""
@@ -658,9 +679,14 @@ msgid ""
 "pass additional parameters to the application (i.e. for TerminalEmulator\n"
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
+"Si no espeficau l'opció --launch, exo-open obrirà les URL especificades\n"
+"amb els indentificadors preferits per URL. D'altre manera, si voleu\n"
+"espeficar l'opció --launch podreu seleccionar l'aplicació preferida a\n"
+"executar. També podreu passar paràmetres adicionals per l'apliació (per\n"
+"exemple, a TerminalEmulator podeu decidir que l'ordre sigui executada\n"
+"sobre una terminal)."
 
 #: ../exo-open/main.c:100
-#, fuzzy
 msgid ""
 "Copyright (c) 2005-2006\n"
 "        os-cillation e.K. All rights reserved.\n"
@@ -668,7 +694,7 @@ msgid ""
 "Written by Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 msgstr ""
-"Copyright (c) 2005\n"
+"Copyright (c) 2005-2006\n"
 "          os-cillation e.K. Tots els drets reservats.\n"
 "\n"
 "Escrit per Benedikt Meurer <benny@xfce.org>\n"
@@ -677,9 +703,9 @@ msgstr ""
 #: ../exo-open/main.c:121
 #, c-format
 msgid "Failed to launch preferred application for category `%s'."
-msgstr ""
+msgstr "És impossible llançar l'aplicació predeferida de la categoria `%s'."
 
 #: ../exo-open/main.c:144
 #, c-format
 msgid "Failed to open URL `%s'."
-msgstr ""
+msgstr "És impossible obrir l'URL `%s'."
