--- a/po/ca.po
+++ b/po/ca.po
@@ -650,8 +650,10 @@ msgid ""
 "where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
-"  --launch TIPUS [PARÀMETREs...]         Llença l'apliació preferida del TIPUS\n"
-"                                         amb els PARÀMETRES opcionals, on TIPUS\n"
+"  --launch TIPUS [PARÀMETREs...]         Llença l'apliació preferida del "
+"TIPUS\n"
+"                                         amb els PARÀMETRES opcionals, on "
+"TIPUS\n"
 "                                         és un dels valors següents."
 
 #: ../exo-open/main.c:53
